--- a/k8s-manifolds/web-deployment.yaml
+++ b/k8s-manifolds/web-deployment.yaml
@@ -17,14 +17,7 @@ spec:
       containers:
         - image: bootdotdev/synergychat-web:latest
           name: synergychat-web
-          env:
-            - name: WEB_PORT
-              valueFrom:
-                configMapKeyRef:
-                  name: synergychat-web-configmap
-                  key: WEB_PORT
-            - name: API_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: synergychat-web-configmap
-                  key: API_URL
+          envFrom:
+          - configMapRef:
+              name: synergychat-web-configmap
+          resources: {}
